--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -1828,7 +1828,7 @@
    "cell_type": "code",
    "source": [
     "df.to_csv(\"cleaned_list.csv\", index=False)\n",
-    "df.to_excel(\"cleaned_list.xlsx\", index=False)"
+    "# df.to_excel(\"cleaned_list.xlsx\", index=False)"
    ],
    "id": "54fb718fdbedf47d",
    "outputs": [],
